traefik/traefik-ingress-dashboard.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-ingress
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`traefik.virtual.local`)
    kind: Rule
    services:
    - name: traefik-dashboard
      port: 8080
